# SJTU-CS230-raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: area_light.hpp  camera.hpp  color.hpp  finite_planar_shape.hpp  geometry_object.hpp  light.hpp  material.hpp  normalObject.hpp  normal_object.hpp  object.hpp  planar_shape.hpp  plane_shape.hpp  printer.hpp  ray.hpp  rectangle_object.hpp  rectangle_shape.hpp  renderer.hpp  resources.hpp  scene.hpp  screen.hpp  shape.hpp  sphere_shape.hpp  spot_light.hpp  traceconfig.hpp  tracer.hpp  triangle_shape.hpp  vec.hpp
src/: main.cpp  printer.hpp  scene.hpp  vec.hpp
